[gd_scene load_steps=13 format=2]

[ext_resource path="res://Fonts/advanced_pixel-7.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/UI/Upgrade_HUD.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Spaceship_,Parts/Engine.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Spaceship_,Parts/Shield.tscn" type="PackedScene" id=4]
[ext_resource path="res://Textures/spaceship.png" type="Texture" id=5]
[ext_resource path="res://Textures/mine.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Spaceship_,Parts/Robots/HealthRobot.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Spaceship_,Parts/Robots/ShieldRobot.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
size = 45
outline_size = 1
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 18
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 18
font_data = ExtResource( 1 )

[node name="Upgrade_HUD" type="Node2D"]
z_index = 3
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
modulate = Color( 0.384314, 0, 0.643137, 1 )
show_behind_parent = true
margin_left = 56.0
margin_top = 72.0
margin_right = 576.0
margin_bottom = 452.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_left = 220.0
margin_top = 100.0
margin_right = 418.0
margin_bottom = 146.0
custom_fonts/font = SubResource( 1 )
text = "Upgrade Ship"
align = 1
valign = 1

[node name="SpaceShip" type="Sprite" parent="."]
position = Vector2( 320, 244 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )

[node name="Engine" parent="SpaceShip" instance=ExtResource( 3 )]
position = Vector2( 0.0463257, 14.0268 )
scale = Vector2( 0.5, 0.75 )

[node name="Shield" parent="SpaceShip" instance=ExtResource( 4 )]
position = Vector2( 0.475014, 2.02682 )
scale = Vector2( 1.50325, 1.5 )

[node name="HealthRobot" parent="SpaceShip" instance=ExtResource( 7 )]
self_modulate = Color( 1, 1, 1, 1 )
margin_left = -19.525
margin_top = 30.7125
margin_right = 12.475
margin_bottom = 62.7125

[node name="ShieldRobot" parent="SpaceShip" instance=ExtResource( 8 )]
self_modulate = Color( 1, 1, 1, 1 )
margin_left = 4.47501
margin_top = 30.7125
margin_right = 36.475
margin_bottom = 62.7125

[node name="Laser" type="Node2D" parent="."]
visible = false
position = Vector2( 140, 196 )

[node name="Laser_lbl" type="Label" parent="Laser"]
margin_left = -59.0
margin_top = -40.0
margin_right = 81.0
margin_bottom = 4.0
custom_fonts/font = SubResource( 2 )
text = "Laser Damage: 0"
align = 1
valign = 1

[node name="Laser_btn" type="Button" parent="Laser"]
margin_left = -59.0
margin_top = -4.0
margin_right = 93.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 3 )
disabled = true
text = "x 0 for Upgrade"
icon = ExtResource( 6 )

[node name="Shoot" type="Node2D" parent="."]
position = Vector2( 480, 196 )

[node name="Shoot_lbl" type="Label" parent="Shoot"]
margin_left = -60.0
margin_top = -40.0
margin_right = 80.0
margin_bottom = 4.0
custom_fonts/font = SubResource( 2 )
text = "Shoot Rate: 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shoot_btn" type="Button" parent="Shoot"]
margin_left = -73.4067
margin_top = -4.0
margin_right = 78.5933
margin_bottom = 34.0
custom_fonts/font = SubResource( 3 )
disabled = true
text = "x 0 for Upgrade"
icon = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fully_upgraded_lbl" type="Label" parent="Shoot"]
visible = false
modulate = Color( 0.439216, 0.788235, 0.0862745, 1 )
margin_left = -72.0
margin_top = -3.0
margin_right = 79.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 2 )
text = "Fully Upgraded"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Durability" type="Node2D" parent="."]
position = Vector2( 140, 360 )

[node name="Durability_lbl" type="Label" parent="Durability"]
margin_left = -60.0
margin_top = -40.0
margin_right = 80.0
margin_bottom = 4.0
custom_fonts/font = SubResource( 2 )
text = "Durability: 0"
align = 1
valign = 1

[node name="Durability_btn" type="Button" parent="Durability"]
margin_left = -59.0
margin_top = -4.0
margin_right = 94.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 4 )
disabled = true
text = "x 0 for Upgrade"
icon = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fully_upgraded_lbl" type="Label" parent="Durability"]
visible = false
modulate = Color( 0.439216, 0.788235, 0.0862745, 1 )
margin_left = -60.0
margin_top = -8.0
margin_right = 91.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 2 )
text = "Fully Upgraded"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shield" type="Node2D" parent="."]
position = Vector2( 480, 360 )

[node name="Shield_lbl" type="Label" parent="Shield"]
margin_left = -60.0
margin_top = -40.0
margin_right = 80.0
margin_bottom = 4.0
custom_fonts/font = SubResource( 2 )
text = "Shield: 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shield_btn" type="Button" parent="Shield"]
margin_left = -73.4067
margin_top = -4.0
margin_right = 78.5933
margin_bottom = 34.0
custom_fonts/font = SubResource( 3 )
disabled = true
text = "x 0 for Upgrade"
icon = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fully_upgraded_lbl" type="Label" parent="Shield"]
visible = false
modulate = Color( 0.439216, 0.788235, 0.0862745, 1 )
margin_left = -72.0
margin_top = -3.0
margin_right = 79.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 2 )
text = "Fully Upgraded"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="visibility_changed" from="." to="." method="_on_Upgrade_HUD_visibility_changed"]
[connection signal="pressed" from="Laser/Laser_btn" to="." method="_on_Laser_btn_pressed"]
[connection signal="pressed" from="Shoot/Shoot_btn" to="." method="_on_Shoot_btn_pressed"]
[connection signal="pressed" from="Durability/Durability_btn" to="." method="_on_Durability_btn_pressed"]
[connection signal="pressed" from="Shield/Shield_btn" to="." method="_on_Shield_btn_pressed"]
